--- a/react-jenkins-docker-k8s-main/Jenkinsfile
+++ b/react-jenkins-docker-k8s-main/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/keertikrith/react-jenkins-docker-k8s.git'
+                git branch: 'main', url: 'https://github.com/prasadjr/assignment.git'
             }
         }
         stage('Build') {
@@ -29,9 +29,9 @@ pipeline {
         stage('Deploy to Kubernetes') {
             steps {
                 script {
-                    // Apply the deployment and service configurations
-                    sh "kubectl apply -f ~/k8s-deployment/k8s-deployment.yaml"
-                    sh "kubectl apply -f ~/k8s-deployment/k8s-service.yaml"
+                    // Ensure that kubectl is set up correctly and pointing to your Kubernetes cluster
+                    sh "kubectl apply -f k8s-deployment/k8s-deployment.yaml"
+                    sh "kubectl apply -f k8s-deployment/k8s-service.yaml"
                 }
             }
         }
